--- a/articles/08467cf56f96d6.md
+++ b/articles/08467cf56f96d6.md
@@ -1,8 +1,8 @@
 ---
 title: "PythonのWebスクレイピングでボタンやリンクが押せないときに試すこと"
 emoji: "🐍"
-type: "tech" # tech: 技術記事 / idea: アイデア
-topics: ["Python", "Selenium", "スクレイピング", "Tech"]
+type: "tech"
+topics: ["python", "tech", "selenium", "スクレイピング"]
 published: true
 ---
 
