エラー直した

--- a/articles/c1c9956541d5f3.md
+++ b/articles/c1c9956541d5f3.md
@@ -2,7 +2,7 @@
 title: "UI/UX Camp! fortnite"
 emoji: "📝"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: ['ui/ux]
+topics: ['ui/ux']
 published: false
 ---
 ## オープニング
