--- a/articles/c1c9956541d5f3.md
+++ b/articles/c1c9956541d5f3.md
@@ -2,20 +2,25 @@
 title: "UI/UX Camp! fortnite"
 emoji: "📝"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: ['ui/ux']
+topics: ["ui/ux"]
 published: false
 ---
+
 ## オープニング
-　テクノロジーの変化によって、モノのインターネット化、デジタルと人の融合が起こる。
+
+テクノロジーの変化によって、モノのインターネット化、デジタルと人の融合が起こる。
 
 どうなるか...
+
 ### 自在化
+
 現在 ... テクノロジーで対応したものを人が直接動かす
 未来 ... テクノロジーで対応したものを人がリモートで動かす
-→人の手をできるだけ使わない
+→ 人の手をできるだけ使わない
 
-## メタバースのUI/UX
-UXとは ... 
+## メタバースの UI/UX
+
+UX とは ...
 ユーザーがデザインされたもの(= UI)をどう使い、どういう体験を行うか
 → クリエイターは、ユーザーが「どう使うか」を考慮する必要がある
 
@@ -29,32 +34,36 @@ UXとは ...
 ポイント
 脳には限界があり、それを考慮して環境をデザインする必要がある。
 
-### UI/UX設計における3つのポイント
+### UI/UX 設計における 3 つのポイント
+
 1. 知覚は主観的
-→ 事前知識、期待、状況によって左右されるものなので、当たり前と思うものでも他の人から見たらそうでない可能性がある
+   → 事前知識、期待、状況によって左右されるものなので、当たり前と思うものでも他の人から見たらそうでない可能性がある
 
 バリュープロポジションの定義とユーザー検証を繰り返し行い、ターゲットを見誤らないようにする必要がある。
 
 2. 記憶は不確か
-→ ユーザーは昨日行った操作でも忘れることがある
+   → ユーザーは昨日行った操作でも忘れることがある
 
 必要な情報はすぐ見れるようにする必要がある
-※見た目から操作方法を推測できるUI > 簡単に操作方法を見れること
+※見た目から操作方法を推測できる UI > 簡単に操作方法を見れること
 
 3. 人間の注意力は不十分
-→細部まで見ない
+   → 細部まで見ない
 
-情報のメリハリをはっきりさせ、行いたい動作をミスなく実現できるようにUIをデザインする必要がある。
+情報のメリハリをはっきりさせ、行いたい動作をミスなく実現できるように UI をデザインする必要がある。
 
 アフォーダンスは重要
-→形から機能を推測できるUIにすべき
+→ 形から機能を推測できる UI にすべき
 
 そのために ...
-- 一般的なUIの見た目に従う
+
+- 一般的な UI の見た目に従う
 - サービス内での表現を統一する
 
-### UXのポイント
-UXは人間中心に考える必要がある
+### UX のポイント
+
+UX は人間中心に考える必要がある
+
 - 人間中心
 - 科学的根拠に基づく
 - ダークパターンを用いない
@@ -62,20 +71,20 @@ UXは人間中心に考える必要がある
 ダークパターンとは...
 → 企業の利益のために意図的にユーザーを騙す
 
-### UXのマインドセット
+### UX のマインドセット
+
 -　ダイバーシティ、インクルージョンを考慮する
--  ダークパターンを除外する
 
+- ダークパターンを除外する
 
-## まとめ
-- UIをデザインして、UXを届ける
-- UI3つのポイント
-	1. 知覚は主観的
-	2. 記憶は不確か
-	3. 人間の注意力は不十分
-- UX3つのポイント
-	1. 人間中心に設計する
-	2. 科学的根拠に基づく
-	3. ダークパターンを排除する
+## 全体のポイント
 
-## 感想
+- UI をデザインして、UX を届ける
+- UI3 つのポイント
+  1.  知覚は主観的
+  2.  記憶は不確か
+  3.  人間の注意力は不十分
+- UX3 つのポイント
+  1.  人間中心に設計する
+  2.  科学的根拠に基づく
+  3.  ダークパターンを排除する
